--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -9,13 +9,16 @@ pool:
 variables:
   buildConfiguration: 'Release'
   wwwrootDir: 'Tailspin.SpaceGame.Web/wwwroot'
-  dotnetSdkVersion: '3.x'
+  dotnetSdkVersion: '2.1.505'
 
 steps:
 - task: DotNetCoreInstaller@0
   displayName: 'Use .NET Core SDK $(dotnetSdkVersion)'
   inputs:
+    packageType: sdk
     version: '$(dotnetSdkVersion)'
+    includePreviewVersions: true
+    
 
 - task: Npm@1
   displayName: 'Run npm install'
