--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -9,16 +9,20 @@ pool:
 variables:
   buildConfiguration: 'Release'
   wwwrootDir: 'Tailspin.SpaceGame.Web/wwwroot'
-  dotnetSdkVersion: '3.1.x'
+  dotnetSdkVersion: '2.1.505'
 
 steps:
 - task: DotNetCoreInstaller@0
   displayName: 'Use .NET Core SDK $(dotnetSdkVersion)'
   inputs:
-    packageType: sdk
     version: '$(dotnetSdkVersion)'
-    includePreviewVersions: true
-    
+
+- task: UseDotNet@2
+  displayName: 'Use .NET Core sdk $(dotnetSdkVersion)'
+  inputs:
+    packageType: sdk
+    version: dotnetSdkVersion
+    installationPath: $(Agent.ToolsDirectory)/dotnet
 
 - task: Npm@1
   displayName: 'Run npm install'
