--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -21,7 +21,7 @@ steps:
   displayName: 'Use .NET Core sdk $(dotnetSdkVersion)'
   inputs:
     packageType: sdk
-    version: dotnetSdkVersion
+    version: 2.1
     installationPath: $(Agent.ToolsDirectory)/dotnet
 
 - task: Npm@1
